<resources>
    <string name="app_name">QuizApp1</string>
    <string name="quiz_question_sv">Vilket land tillhör denna flagga?</string>
    <string name="question_answer_wrong_sv">Fel</string>
    <string name="question_answer_right_sv">Rätt</string>
    <string name="tv_progress_bar_text_sv">%1$s / %2$s</string>
    <string name="content_decription_image">image</string>
    <string name="play_again_sv">SPELA IGEN</string>
    <string name="default_player_highscore_name">---</string>
    <string name="default_player_highscore_points">0 p</string>
    <string name="player_highscore_points">%1$s p</string>
    <string name="btn_highscore_one">1</string>
    <string name="btn_highsvore_two">2</string>
    <string name="btn_highscore_three">3</string>
    <string name="welcome_message_sv">Låt oss se vad du kan om flaggor. Välj Spela Quiz i menyn nedan för att köra igång.</string>
    <string name="name_sv">Namn</string>
    <string name="play_sv">Spela</string>
    <string name="return_sv">Tillbaka</string>
    <string name="button_on_sv">På</string>
    <string name="button_off_sv">Av</string>
    <string name="nr_ten">10</string>
    <string name="nr_twenty">20</string>
    <string name="nr_thirty">30</string>
    <string name="continue_sv">Fortsätt</string>
    <string name="result_message_sv">Din poäng är %1$s av %2$s</string>
    <string name="result_percentage_right">%1$s % Rätt</string>
    <string name="result_percentage_wrong">%1$s % Fel</string>
    <string name="congratulationz_message_sv">Grattis %1$s</string>
    <string name="highscore_message_nr_one_sv">Grattis %1$s! Du är ny etta på highscore-listan!</string>
    <string name="highscore_message_nr_two_sv">Grattis %1$s! Du är ny tvåa på highscore-listan!</string>
    <string name="highscore_message_nr_three_sv">Grattis %1$s! Du är ny trea på highscore-listan!</string>
    <string name="highscore_no_entry_sv">Du tog dig inte in på highscore-listan.</string>
    <string name="enter_nr_of_q_message_sv">Välj antal frågor</string>
    <string name="enter_name_message_sv">Skriv in ditt namn</string>
    <string name="msg_choose_nr_of_questions_sv">Välj antal frågor</string>
    <string name="msg_enter_name_sv">Skriv in ditt namn</string>
    <string name="iv_content_questions_logo">Välj antal frågor logo</string>
    <string name="iv_content_sound">Bildtext ljud</string>
    <string name="iv_content_flag">Bild på flagga</string>
    <string name="iv_content_circle_timer_background">Bild för cirkeltimer</string>
    <string name="iv_content_result_logo_sv">Resultatlogo svenska</string>
    <string name="iv_content_highscore_logo">Highscorelogo svenska</string>
    <string name="iv_content_quiz_logo">Flagquizlogo</string>
    <string name="iv_content_welcome_msg_sv">Välkomstmeddelande svenska</string>
    <string name="iv_content_play_quiz_sv">Spela quiz logo</string>
    <string name="iv_content_enter_name_sv">Bild skriv in ditt namn</string>
    <string name="iv_content_settings_sv">Inställningar logo</string>


</resources>