<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayFragment">

    <TextView
        android:id="@+id/tv_enter_nr_of_questions_message"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/btn_rounded_corner_white"
        android:text="@string/enter_nr_of_q_message_sv"
        android:textColor="#F2000000"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="-164dp"
        android:contentDescription="@string/content_decription_image"
        android:src="@drawable/play_quiz_orange_fade_extra_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="385dp"
            android:layout_height="250dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_welcome"
                    android:layout_width="323dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_decription_image"
                    android:src="@drawable/ener_questions_tommy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <Button
                        android:id="@+id/btn_select_ten"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/bitter"
                        android:textColor="#888888"
                        android:text="@string/nr_ten"
                        android:textSize="25sp" />


                    <Button
                        android:id="@+id/btn_select_twenty"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="60dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/bitter"
                        android:textColor="#888888"
                        android:text="@string/nr_twenty"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/btn_select_thirty"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="60dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/bitter"
                        android:textColor="#888888"
                        android:text="@string/nr_thirty"
                        android:textSize="25sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_rounded_corners_orange_fade"
                    android:fontFamily="@font/bitter"
                    android:text="@string/continue_sv"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold">

                </Button>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>