<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SettingsFragment">

    <ImageView
        android:id="@+id/iv_logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="-164dp"
        android:src="@drawable/settings_sv"
        android:contentDescription="@string/iv_content_settings_sv" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="385dp"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/content_decription_image"
                    android:src="@drawable/sound_image_sv" />


                    <Button
                        android:id="@+id/btn_sound_on"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/bitter"
                        android:textColor="#888888"
                        android:text="@string/button_on_sv"
                        android:textSize="25sp"
                        tools:ignore="ButtonStyle" />


                    <Button
                        android:id="@+id/btn_sound_off"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/bitter"
                        android:textColor="#888888"
                        android:text="@string/button_off_sv"
                        android:textSize="25sp"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_back_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/btn_rounded_corners_orange_fade"
                    android:fontFamily="@font/bitter"
                    android:text="@string/return_sv"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold">

                </Button>

            </LinearLayout>

    </androidx.cardview.widget.CardView>

    </RelativeLayout>



</FrameLayout>