<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayFragment">

    <TextView
        android:id="@+id/tv_enter_name_message"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded_corner_white"
        android:gravity="center"
        android:text="@string/enter_name_message_sv"
        android:textColor="#F2000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/iv_content_play_quiz_sv"
        android:src="@drawable/play_quiz_orange_fade_extra_text"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_text"
        app:layout_constraintWidth_percent="0.9"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/iv_welcome"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.65"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:contentDescription="@string/iv_content_enter_name_sv"
                android:src="@drawable/enter_name_tommy" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bitter"
                    android:hint="@string/name_sv"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded_corners_orange_fade"
                android:fontFamily="@font/bitter"
                android:text="@string/play_sv"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>