<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HighScoreFragment">

    <ImageView
        android:id="@+id/iv_logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="-164dp"
        android:src="@drawable/high_score_orange"
        android:contentDescription="@string/iv_content_highscore_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="385dp"
            android:layout_height="250dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_hs_one"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/round_button_selected"
                        android:textColor="#696969"
                        android:fontFamily="@font/bitter"
                        android:textStyle="bold"
                        android:text="@string/btn_highscore_one"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tv_hs_one_name"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/bitter"
                        android:text="@string/default_player_highscore_name"
                        android:textColor="#696969"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tv_hs_one_points"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/bitter"
                        android:textColor="#696969"
                        android:textSize="25sp"
                        android:text="@string/default_player_highscore_points" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_hs_two"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/round_button_selected"
                        android:textColor="#696969"
                        android:fontFamily="@font/bitter"
                        android:textStyle="bold"
                        android:text="@string/btn_highsvore_two"
                        android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_hs_two_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bitter"
                    android:text="@string/default_player_highscore_name"
                    android:textColor="#696969"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_hs_two_points"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/bitter"
                    android:textColor="#696969"
                    android:textSize="25sp"
                    android:text="@string/default_player_highscore_points" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                        android:id="@+id/btn_hs_three"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:clickable="false"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/round_button_selected"
                        android:textColor="#696969"
                        android:fontFamily="@font/bitter"
                        android:textStyle="bold"
                        android:text="@string/btn_highscore_three"
                        android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_hs_three_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bitter"
                    android:text="@string/default_player_highscore_name"
                    android:textColor="#696969"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_hs_three_points"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/bitter"
                    android:textColor="#696969"
                    android:textSize="25sp"
                    android:text="@string/default_player_highscore_points" />

            </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</FrameLayout>